foundations/block-and-inline/02-margin-and-padding-2/style.css
body {
  background: #eee;
  font-family: sans-serif;
}

.card {
  width: 400px;
  background: #fff;
  margin: 16px auto;
  padding:8px;
}

.title {
  background: #e3f4ff;
  font-size: 16px;
  margin-bottom: 8px;
}

.content {
  background: #e3f4ff;
  margin-bottom: 8px;
  padding: 8px;

}

.button-container {
  background: #e3f4ff;
  padding: 10px;
}

button {
  background: white;
  border: 1px solid #eee;
  padding: 8px;
}

